deploy/k8s/01-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: volctrain
  labels:
    name: volctrain
